--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,13 @@ android:
         - extra-android-m2repository
         - extra-google-m2repository
 
+before_cache:
+    - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+    - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
+
+cache:
+    directories:
+        - $HOME/.gradle/caches/
+        - $HOME/.gradle/wrapper/
+
 script: ./gradlew assembleDebug
