Login screen : UI Libraries + resources

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,10 @@ dependencies {
     // ButterKnife
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+
+    // Material EditText
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
+
+    // Material Button
+    compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
 }
