--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 
     // Android
     compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:cardview-v7:25.0.1'
 
     // Mosby
     compile 'com.hannesdorfmann.mosby:mvp:2.0.1'
@@ -47,8 +49,14 @@ dependencies {
     // Material Button
     compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
 
-    // Firebase dependencies
+    // Firebase
     compile 'com.google.firebase:firebase-auth:10.0.0'
+
+    // EventBus
+    compile 'org.greenrobot:eventbus:3.0.0'
+
+    // Loading Indicator
+    compile 'com.wang.avi:library:2.1.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
