--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,8 @@ dependencies {
     compile 'com.google.firebase:firebase-core:10.0.0'
     compile 'com.google.firebase:firebase-auth:10.0.0'
     compile 'com.google.firebase:firebase-storage:10.0.0'
-    compile 'com.google.firebase:firebase-database:9.6.1'
+    compile 'com.google.firebase:firebase-database:10.0.0'
+    compile 'com.firebaseui:firebase-ui-database:0.6.0'
 
     // EventBus
     compile 'org.greenrobot:eventbus:3.0.0'
