--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         <activity android:name=".activities.CreatePostActivity"
             android:label="@string/create_post" />
 
+        <activity android:name=".activities.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
         <provider
             android:authorities="com.malloc.mosbymail.fileprovider"
             android:name="android.support.v4.content.FileProvider"
