--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"/>
 
+        <activity android:name=".activities.CommentsActivity"
+            android:label="@string/comments" />
+
         <provider
             android:authorities="com.malloc.mosbymail.fileprovider"
             android:name="android.support.v4.content.FileProvider"
